--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "guid": "0.0.12",
     "http": "0.0.0",
+    "moment": "^2.24.0",
     "mongodb": "^3.3.0",
     "mongoose": "^5.6.10"
   }
